play-pit/Security/Vault/ingress.yaml
---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: vault-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
  - hosts:
    - vault.kx-as-code.local
  rules:
  - host: vault.kx-as-code.local
    http:
      paths:
       - path: /
         backend:
           serviceName: vault
           servicePort: 8200

---
